<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BattleShip</string>
    <string name="hello_world">Hello world!</string>
    <string name="jugar">Jugar</string>
    <string name="title_activity_ayuda">Ayuda</string>
    <string name="ayuda">Bienvenidos a BattleShip!! Coloca tus barcos antes de comenzar la partida. Una vez que los tengas intenta hundir los de tu rival. Selecciona la celda a la que quieres disparar y observa como hundes poco a poco su flota. Recuerda, quien acabe antes con su enemigo gana.</string>
    <string name="title_activity_segunda_ayuda">SegundaAyuda</string>
    <string name="title_activity_tercera_ayuda">TerceraAyuda</string>
    <string name="title_activity_ultima_ayuda">UltimaAyuda</string>
    <string name="title_activity_nivel">Nivel</string>
     <string name="title_activity_info">About Battleships</string>
    <string name="title_activity_coloca_barcos">ColocaBarcos</string>
    <string name="title_activity_juego_medio">JuegoMedio</string>
    <string name="title_activity_juego_dificil">JuegoDificil</string>
    <string name="title_activity_modo">Modo</string>
    <string name="title_activity_individual">Individual</string>
    <string name="jugadas">Jugadas:</string>
    <string name="tablero_enemigo">Tablero enemigo</string>
    <string name="tablero_jugador">Tu tablero</string>
    <string name="A1">A1</string>
    <string name="A2">A2</string>
    <string name="A3">A3</string>
    <string name="A4">A4</string>
    <string name="A5">A5</string>
    <string name="A6">A6</string>
    <string name="A7">A7</string>
    <string name="B1">B1</string>
	<string name="B2">B2</string>
	<string name="B3">B3</string>
   	<string name="B4">B4</string>  
    <string name="B5">B5</string>
    <string name="B6">B6</string>
    <string name="B7">B7</string>
	<string name="C1">C1</string>    
	<string name="C2">C2</string>
    <string name="C3">C3</string>
    <string name="C4">C4</string>
    <string name="C5">C5</string>
    <string name="C6">C6</string>
    <string name="C7">C7</string>
    <string name="D1">D1</string>
    <string name="D2">D2</string>
    <string name="D3">D3</string>
    <string name="D4">D4</string>
    <string name="D5">D5</string>
    <string name="D6">D6</string>
    <string name="D7">D7</string>
    <string name="E1">E1</string>
    <string name="E2">E2</string>
    <string name="E3">E3</string>
    <string name="E4">E4</string>
    <string name="E5">E5</string> 
    <string name="E6">E6</string>
    <string name="E7">E7</string>
    <string name="F1">F1</string>
    <string name="F2">F2</string>
    <string name="F3">F3</string>
    <string name="F4">F4</string>
    <string name="F5">F5</string> 
    <string name="F6">F6</string>
    <string name="F7">F7</string>  
    <string name="G1">G1</string>
    <string name="G2">G2</string>
    <string name="G3">G3</string>
    <string name="G4">G4</string>
    <string name="G5">G5</string> 
    <string name="G6">G6</string>
    <string name="G7">G7</string>
</resources>
