<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/panelFacilJugador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/a1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="104dp"
        android:background="#00000000"
        android:hint="@string/A1"
        android:onClick="jugadaRealizada"
        android:tag="A1" />

    <Button
        android:id="@+id/a2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/a1"
        android:layout_alignBottom="@+id/a1"
        android:layout_toRightOf="@+id/a1"
        android:background="#00000000"
        android:hint="@string/A2"
        android:onClick="jugadaRealizada"
        android:tag="A2" />

    <Button
        android:id="@+id/a3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_above="@+id/b3"
        android:layout_toRightOf="@+id/b2"
        android:background="#00000000"
        android:hint="@string/A3"
        android:onClick="jugadaRealizada"
        android:tag="A3" />

    <Button
        android:id="@+id/a4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@+id/a2"
        android:layout_toRightOf="@+id/a3"
        android:background="#00000000"
        android:hint="@string/A4"
        android:onClick="jugadaRealizada"
        android:tag="A4" />

    <Button
        android:id="@+id/a5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBottom="@+id/a2"
        android:layout_toRightOf="@+id/a4"
        android:background="#00000000"
        android:hint="@string/A5"
        android:onClick="jugadaRealizada"
        android:tag="A5" />

    <Button
        android:id="@+id/a6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/cambiarVista"
        android:layout_toLeftOf="@+id/a7"
        android:background="#00000000"
        android:hint="@string/A6"
        android:onClick="jugadaRealizada"
        android:tag="A6" />

    <Button
        android:id="@+id/a7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_above="@+id/b7"
        android:layout_toRightOf="@+id/b6"
        android:background="#00000000"
        android:hint="@string/A7"
        android:onClick="jugadaRealizada"
        android:tag="A7" />

    <Button
        android:id="@+id/b1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/a2"
        android:layout_toLeftOf="@+id/a2"
        android:background="#00000000"
        android:hint="@string/B1"
        android:onClick="jugadaRealizada"
        android:tag="B1" />

    <Button
        android:id="@+id/b2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/b1"
        android:layout_alignBottom="@+id/b1"
        android:layout_alignLeft="@+id/a2"
        android:background="#00000000"
        android:hint="@string/B2"
        android:onClick="jugadaRealizada"
        android:tag="B2" />

    <Button
        android:id="@+id/b3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/b2"
        android:layout_alignBottom="@+id/b2"
        android:layout_toRightOf="@+id/a2"
        android:background="#00000000"
        android:hint="@string/B3"
        android:onClick="jugadaRealizada"
        android:tag="B3" />

    <Button
        android:id="@+id/b4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/b3"
        android:layout_alignBottom="@+id/b3"
        android:layout_toLeftOf="@+id/a5"
        android:background="#00000000"
        android:hint="@string/B4"
        android:onClick="jugadaRealizada"
        android:tag="B4" />

    <Button
        android:id="@+id/b5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/b4"
        android:layout_alignBottom="@+id/b4"
        android:layout_toRightOf="@+id/b4"
        android:background="#00000000"
        android:hint="@string/B5"
        android:onClick="jugadaRealizada"
        android:tag="B5" />

    <Button
        android:id="@+id/b6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/a5"
        android:layout_toRightOf="@+id/a5"
        android:background="#00000000"
        android:hint="@string/B6"
        android:onClick="jugadaRealizada"
        android:tag="B6" />

    <Button
        android:id="@+id/b7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_above="@+id/c5"
        android:layout_toRightOf="@+id/d6"
        android:background="#00000000"
        android:hint="@string/B7"
        android:onClick="jugadaRealizada"
        android:tag="B7" />

    <Button
        android:id="@+id/c1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/b1"
        android:layout_toLeftOf="@+id/b2"
        android:background="#00000000"
        android:hint="@string/C1"
        android:onClick="jugadaRealizada"
        android:tag="C1" />

    <Button
        android:id="@+id/c2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/c1"
        android:layout_alignBottom="@+id/c1"
        android:layout_toLeftOf="@+id/a3"
        android:background="#00000000"
        android:hint="@string/C2"
        android:onClick="jugadaRealizada"
        android:tag="C2" />

    <Button
        android:id="@+id/c3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/c2"
        android:layout_alignBottom="@+id/c2"
        android:layout_toLeftOf="@+id/b4"
        android:background="#00000000"
        android:hint="@string/C3"
        android:onClick="jugadaRealizada"
        android:tag="C3" />

    <Button
        android:id="@+id/c4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/c3"
        android:layout_alignBottom="@+id/c3"
        android:layout_toLeftOf="@+id/b5"
        android:background="#00000000"
        android:hint="@string/C4"
        android:onClick="jugadaRealizada"
        android:tag="C4" />

    <Button
        android:id="@+id/c5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/c4"
        android:layout_alignBottom="@+id/c4"
        android:layout_toRightOf="@+id/c4"
        android:background="#00000000"
        android:hint="@string/C5"
        android:onClick="jugadaRealizada"
        android:tag="C5" />

    <Button
        android:id="@+id/c6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/b5"
        android:layout_toRightOf="@+id/b5"
        android:background="#00000000"
        android:hint="@string/C6"
        android:onClick="jugadaRealizada"
        android:tag="C6" />

    <Button
        android:id="@+id/c7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/b7"
        android:layout_toRightOf="@+id/b6"
        android:background="#00000000"
        android:hint="@string/C7"
        android:onClick="jugadaRealizada"
        android:tag="C7" />

    <Button
        android:id="@+id/d1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/c1"
        android:layout_toLeftOf="@+id/c2"
        android:background="#00000000"
        android:hint="@string/D1"
        android:onClick="jugadaRealizada"
        android:tag="D1" />

    <Button
        android:id="@+id/d2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/c2"
        android:layout_toLeftOf="@+id/c3"
        android:background="#00000000"
        android:hint="@string/D2"
        android:onClick="jugadaRealizada"
        android:tag="D2" />

    <Button
        android:id="@+id/d3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/d2"
        android:layout_alignBottom="@+id/d2"
        android:layout_toLeftOf="@+id/c4"
        android:background="#00000000"
        android:hint="@string/D3"
        android:onClick="jugadaRealizada"
        android:tag="D3" />

    <Button
        android:id="@+id/d4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/d3"
        android:layout_alignBottom="@+id/d3"
        android:layout_toLeftOf="@+id/c5"
        android:background="#00000000"
        android:hint="@string/D4"
        android:onClick="jugadaRealizada"
        android:tag="D4" />

    <Button
        android:id="@+id/d5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_above="@+id/e4"
        android:layout_alignLeft="@+id/c5"
        android:background="#00000000"
        android:hint="@string/D5"
        android:onClick="jugadaRealizada"
        android:tag="D5" />

    <Button
        android:id="@+id/d6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/c5"
        android:layout_toRightOf="@+id/c5"
        android:background="#00000000"
        android:hint="@string/D6"
        android:onClick="jugadaRealizada"
        android:tag="D6" />

    <Button
        android:id="@+id/d7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_above="@+id/e5"
        android:layout_toRightOf="@+id/b6"
        android:background="#00000000"
        android:hint="@string/D7"
        android:onClick="jugadaRealizada"
        android:tag="D7" />

    <Button
        android:id="@+id/e1"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/d1"
        android:layout_toLeftOf="@+id/d2"
        android:background="#00000000"
        android:hint="@string/E1"
        android:onClick="jugadaRealizada"
        android:tag="E1" />

    <Button
        android:id="@+id/e2"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/e1"
        android:layout_alignBottom="@+id/e1"
        android:layout_alignLeft="@+id/d2"
        android:background="#00000000"
        android:hint="@string/E2"
        android:onClick="jugadaRealizada"
        android:tag="E2" />

    <Button
        android:id="@+id/e3"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/e2"
        android:layout_alignBottom="@+id/e2"
        android:layout_toLeftOf="@+id/d4"
        android:background="#00000000"
        android:hint="@string/E3"
        android:onClick="jugadaRealizada"
        android:tag="E3" />

    <Button
        android:id="@+id/e4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/d4"
        android:layout_toLeftOf="@+id/d5"
        android:background="#00000000"
        android:hint="@string/E4"
        android:onClick="jugadaRealizada"
        android:tag="E4" />

    <Button
        android:id="@+id/e5"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/d5"
        android:layout_below="@+id/d5"
        android:background="#00000000"
        android:hint="@string/E5"
        android:onClick="jugadaRealizada"
        android:tag="E5" />

    <Button
        android:id="@+id/e6"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/e5"
        android:layout_alignBottom="@+id/e5"
        android:layout_toLeftOf="@+id/d7"
        android:background="#00000000"
        android:hint="@string/E6"
        android:onClick="jugadaRealizada"
        android:tag="E6" />

    <Button
        android:id="@+id/e7"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/d7"
        android:layout_below="@+id/d7"
        android:background="#00000000"
        android:hint="@string/E7"
        android:onClick="jugadaRealizada"
        android:tag="E7" />

    <Button
        android:id="@+id/cambiarVista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/a4"
        android:layout_alignRight="@+id/a5"
        android:layout_marginBottom="25dp"
        android:background="@drawable/botonreanudar"
        android:onClick="cambioLayout"
        android:tag="cambioLayout" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cambiarVista"
        android:layout_centerHorizontal="true"
        android:text="@string/tablero_jugador"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/Button04"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/e1"
        android:layout_toLeftOf="@+id/e2"
        android:background="#00000000"
        android:hint="@string/F1"
        android:onClick="jugadaRealizada"
        android:tag="F1" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/Button04"
        android:layout_alignBottom="@+id/Button04"
        android:layout_toLeftOf="@+id/e3"
        android:background="#00000000"
        android:hint="@string/F2"
        android:onClick="jugadaRealizada"
        android:tag="F2" />

    <Button
        android:id="@+id/Button09"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/e2"
        android:layout_toRightOf="@+id/e2"
        android:background="#00000000"
        android:hint="@string/F3"
        android:onClick="jugadaRealizada"
        android:tag="F3" />

    <Button
        android:id="@+id/Button07"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/e3"
        android:layout_toRightOf="@+id/e3"
        android:background="#00000000"
        android:hint="@string/F4"
        android:onClick="jugadaRealizada"
        android:tag="F4" />

    <Button
        android:id="@+id/Button13"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/e4"
        android:layout_toRightOf="@+id/e4"
        android:background="#00000000"
        android:hint="@string/F5"
        android:onClick="jugadaRealizada"
        android:tag="F5" />

    <Button
        android:id="@+id/Button11"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/e5"
        android:layout_toRightOf="@+id/e5"
        android:background="#00000000"
        android:hint="@string/F6"
        android:onClick="jugadaRealizada"
        android:tag="F6" />

    <Button
        android:id="@+id/Button06"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/e6"
        android:layout_toRightOf="@+id/e6"
        android:background="#00000000"
        android:hint="@string/F7"
        android:onClick="jugadaRealizada"
        android:tag="F7" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Button04"
        android:layout_toLeftOf="@+id/Button02"
        android:background="#00000000"
        android:hint="@string/G1"
        android:onClick="jugadaRealizada"
        android:tag="G1" />

    <Button
        android:id="@+id/Button05"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Button04"
        android:layout_toRightOf="@+id/Button04"
        android:background="#00000000"
        android:hint="@string/G2"
        android:onClick="jugadaRealizada"
        android:tag="G2" />

    <Button
        android:id="@+id/Button03"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Button02"
        android:layout_toRightOf="@+id/Button02"
        android:background="#00000000"
        android:hint="@string/G3"
        android:onClick="jugadaRealizada"
        android:tag="G3" />

    <Button
        android:id="@+id/Button10"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Button09"
        android:layout_toRightOf="@+id/Button09"
        android:background="#00000000"
        android:hint="@string/G4"
        android:onClick="jugadaRealizada"
        android:tag="G4" />

    <Button
        android:id="@+id/Button08"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Button07"
        android:layout_toRightOf="@+id/Button07"
        android:background="#00000000"
        android:hint="@string/G5"
        android:onClick="jugadaRealizada"
        android:tag="G5" />

    <Button
        android:id="@+id/Button14"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Button13"
        android:layout_toRightOf="@+id/Button13"
        android:background="#00000000"
        android:hint="@string/G6"
        android:onClick="jugadaRealizada"
        android:tag="G6" />

    <Button
        android:id="@+id/Button12"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@+id/Button11"
        android:layout_toRightOf="@+id/Button11"
        android:background="#00000000"
        android:hint="@string/G7"
        android:onClick="jugadaRealizada"
        android:tag="G7" />

</RelativeLayout>